--- a/.github/workflows/build-ipk.yml
+++ b/.github/workflows/build-ipk.yml
@@ -183,6 +183,6 @@ jobs:
         if: steps.tag.outputs.status == 'success' && !cancelled()
         uses: GitRML/delete-workflow-runs@main
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           retain_days: 3
           keep_minimum_runs: 5
